--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -20,10 +20,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Move to backend folder
+        run: |
+          cd ./backend
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
+          pip install -r requirements.txt
       - name: Run Tests
         run: |
-          python backend/manage.py test
+          python manage.py test
