--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
     strategy:
       max-parallel: 4
       matrix:
@@ -16,7 +19,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        working-directory: ./backend
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
