--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,16 +9,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend/
+    # defaults:
+    #   run:
+    #     working-directory: ./frontend/
 
     strategy:
       matrix:
         node-version: [14.x, 16.x]
 
     steps:
-      - run: dir
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
