--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend/
+    # defaults:
+    #   run:
+    #     working-directory: ./frontend/
 
     strategy:
       matrix:
