--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: ls
       - run: cd frontend
+      - run: ls
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
