--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     # defaults:
     #   run:
     #     working-directory: ./frontend/
@@ -19,9 +19,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: ls
+      - run: dir
       - run: cd ./frontend
-      - run: ls
+      - run: dir
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
