--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    defaults:
-      run:
-        working-directory: ./frontend/
+    # defaults:
+    #   run:
+    #     working-directory: ./frontend/
 
     strategy:
       matrix:
@@ -19,6 +19,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - run: dir
+      - run: cd ./frontend
       - run: dir
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
