--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    # defaults:
-    #   run:
-    #     working-directory: ./frontend/
+    defaults:
+      run:
+        working-directory: ./frontend/
 
     strategy:
       matrix:
@@ -20,11 +20,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: dir
-      - run: cd .\frontend
-      - run: dir
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
+          working-directory: ./frontend
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
