--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    defaults:
-      run:
-        working-directory: ./frontend/
+    # defaults:
+    #   run:
+    #     working-directory: ./frontend/
 
     strategy:
       matrix:
@@ -19,13 +19,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: dir
+      # - run: dir
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          working-directory: ./frontend
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm run lint
+      - run: cd frontend && npm ci && npm run lint
