--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: windows-latest
     defaults:
       run:
-        working-directory: ./frontend/
+        working-directory: ./frontend
 
     strategy:
       matrix:
@@ -19,11 +19,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: dir
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npm run build --if-present
       - run: npm run lint
